# veritascore

./: .dockerignore  .env.example  .gitattributes  .gitignore  Dockerfile  Dockerfile.rocm  PRODUCT.md  README.md  docker-compose.yml  index.html  pyproject.toml  render.yaml  smoke_test.py
assets/: Dashboard-BZpcq6AT.js  Dashboard-Bm9smqMx.js  Dashboard-CG0TGqPu.js  Dashboard-D7w8J5rX.js  index-BIPiYa5G.css  index-BML3H1Il.js  index-BbbyAWp0.js  index-C0EhzsqR.css  index-CqHXHk7x.css  index-CxxwMXum.js  index-s8H85zuP.js  recharts-DJRfwUy0.js  recharts-DVSUTowB.js  vendor-BYQvBR4J.js  vendor-DTewhj9-.js
backend/: Dockerfile  __init__.py  config.py  demo_target.py  main.py  target_client.py  vllm_target.py
backend/agents/: __init__.py  adversarial_agent.py  bias_agent.py  compliance_mapper.py  drift_agent.py  graph.py  meta_agent.py  runtime.py  state.py  triage_agent.py
backend/certificate/: __init__.py  pdf.py  schema.py  signer.py
backend/db/: __init__.py  models.py  session.py
backend/evaluators/: __init__.py  _embeddings.py  adversarial_evaluator.py  bias_evaluator.py  drift_evaluator.py
backend/probes/: __init__.py  probe_factory.py  probe_library.py
backend/routers/: __init__.py  audit.py  certificate.py  ws.py
backend/tasks/: __init__.py  celery_app.py  event_bus.py
baselines/: demo-target-v1.json
demo/: certificate.json  recorded-audit.json
examples/gpu-audit/: README.md
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  Dashboard.tsx  index.css  main.tsx
frontend/tests/: audit.e2e.mjs
pitch/: README.md  cover.html  index.html  package-lock.json  package.json  vite.config.ts
pitch/scripts/: assemble_pdf.py  shoot-deck.cjs
pitch/src/: App.tsx  data.ts  index.css  main.tsx  tokens.css
scripts/: demo.ps1  demo.sh  record_demo.py  run_gpu_audit.sh  verify_cert.py
(+24 files in other folders)
